@@ -3,6 +3,6 @@ AUX conf.pri.in 533 RMD160 b105d169207de318a67f46e27686bb6cedcc721b SHA1 e69fd52
 AUX confapp.pri.in 18 RMD160 4d4e03e1ffebfbee5e121743368538bf406f949d SHA1 393162a783c502ca2cf9e6fd8190c392cbae8920 SHA256 cd6dd15f80d7a3becfa0cb4f55dcfaab269b08d9b67d0e5c7313cfae28751d26
 AUX qca-2.0.2-pcfilespath.patch 409 RMD160 65368cb474f2dd1d79b0c9d00424831acd777465 SHA1 a2defc2ae7d3dc31986f89cb8ec2760df85cb208 SHA256 d4d276c13f08bc538b79779aba49126b310df5c97f95b2c7010de050c880d695
 DIST qca-2.0.2.tar.bz2 1937201 RMD160 18b0f497709f9700227644977946735d2ec3c623 SHA1 5a414c3296cd37d1ec34182be0d089c5073f55a8 SHA256 49b5474450104a2298747c243de1451ab7a6aeed4bf7df43ffa4b7128a2837b8
-EBUILD qca-2.0.2-r2.ebuild 2532 RMD160 466e23c61d1b8497ec009c1e4375e041f7cb3a7f SHA1 b69485e55f00f3469fbbfb94e22f316f6d296cc0 SHA256 466adc2cf0cca7f265a58cd38cf8d9ca0cfc29b2d6c3406e9551006229fa527b
-MISC ChangeLog 10165 RMD160 f9033c3adfc549c0575107321799058a175a6c69 SHA1 605207e381e410191120a65752a07208ad435dd3 SHA256 cf31ec9c0676d5bd204eac75d4fca28ba1d3f2c436223e13a115b2f2ec3d710b
+EBUILD qca-2.0.2-r2.ebuild 2593 RMD160 ee899bc2d7a73c0e7d89a5bdebe4e29a2ed7982e SHA1 3c93f44aa5d3cd90e434d2c40c26eda9dda26268 SHA256 1367acc76489df332d62880bfda14233f577de00b8980835f6f6d14aa75a79b1
+MISC ChangeLog 10382 RMD160 b01ff364d8e863e12a6a318db76403a99bbad84f SHA1 ea0942c245117a0afe88a635d590b47c0f8cfa0f SHA256 214bde3cb4d4e8a35a5e956d2dc02b4bafca7ba7a5bfb430dcda6bdaafc3e52f
 MISC metadata.xml 192 RMD160 421d4665996ea38fdfc756e2da700603abe17ec7 SHA1 c32af4b790776c36b524e5f2e2dca587c9cd3351 SHA256 e585d77a075b30463ad28cc89374f9ef2876636bca95a23321b824e0122aa6fd
